Prueba fallida insercion de registros en notificacion_estado_usuario
