# models/notificacion_masivo_usuario.go
@@ -1,0 +1,6 @@
+package models
+
+type NotificacionUsarioMasiva struct {
+	Notificacion *Notificacion
+	Usuarios     []string
+}
